[tool.poetry]
name = "tcp_over_ping"
version = "0.1.0"
description = ""
authors = ["Nir Geller <gnir.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scapy = "^2.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
ipdb = "^0.12.2"
ipython = "^7.9"
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
